# Embedded-Code-Fault-Dataset

./: .gitignore  README.md  pyproject.toml
dataset/: README.md  dataset.xlsx  datasetBuilder.py  datasetStats.py  dataset_stats.json  partitionDataset.py
dataset/01.w_Defects/: bit_shift.xlsx  buffer_overrun_dynamic.xlsx  buffer_underrun_dynamic.xlsx  cmp_funcadr.xlsx  conflicting_cond.xlsx  data_lost.xlsx  data_overflow.xlsx  data_underflow.xlsx  dead_code.xlsx  dead_lock.xlsx  deletion_of_data_structure_sentinel.xlsx  double_free.xlsx  double_lock.xlsx  double_release.xlsx  endless_loop.xlsx  free_nondynamic_allocated_memory.xlsx  free_null_pointer.xlsx  func_pointer.xlsx  function_return_value_unchecked.xlsx  improper_termination_of_block.xlsx  insign_code.xlsx  invalid_extern.xlsx  invalid_memory_access.xlsx  littlemem_st.xlsx  livelock.xlsx  lock_never_unlock.xlsx  memory_allocation_failure.xlsx  memory_leak.xlsx  not_return.xlsx  null_pointer.xlsx  overrun_st.xlsx  ow_memcpy.xlsx  pow_related_errors.xlsx  ptr_subtraction.xlsx  race_condition.xlsx  redundant_cond.xlsx  return_local.xlsx  sign_conv.xlsx  (+13 more)
dataset1/: README.md  dataset.jsonl  dataset.xlsx  datasetBuilder.py  ~$dataset.xlsx
dataset2/: README.md  datasetBuilder.py  subset.jsonl  subsetBuilder.py
faultTypes/: defects.json  faults.xlsx
itcFaultTypes/: faults.json
knowledgeBase/: README.md  certParser.py  cweParser.py  kbBuilder.py
rag/: README.md  parse_cert.py  parse_cwe.py
subset1/: README.md  subset.jsonl  subsetBuilder.py
subset2/: README.md  extractData.py  subsetBuilder.py
(+231 files in other folders)
