[project]
name = "agentic-static-analyzers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "faiss-cpu>=1.13.0",
    "ijson>=3.4.0.post0",
    "nomic>=3.9.0",
    "numpy>=2.3.5",
    "pdfplumber>=0.11.8",
    "tqdm>=4.67.1",
]
